--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ justify-content:center;
 padding:10px;
 border-radius:8px;
 color:white;
-background-color:lightgreen;
+background-color:green;
 outline:none;
-margin-bottom:15px;`
+margin-bottom:15px;
 }
 
